2022-10-15T16:36:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256391465 # 523
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 356 557 / 376 589
* notice: next accum: outdated-unq outdated-all / unq all: 357 558 / 377 590
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-01] / [2022-10-15]

2022-10-15T02:39:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3254128226 # 521
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
* notice: next accum: outdated-unq outdated-all / unq all: 356 557 / 376 589
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2022-09-30] / [2022-10-14]

2022-10-14T16:39:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251528129 # 520
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 354 554 / 375 585
* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-14]

2022-10-14T08:34:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248549206 # 519
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 585
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-30 2022-10-14]

2022-10-13T16:40:00Z: