@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-15T16:36:14Z",
-  "count_outdated" : 558,
-  "uniques_outdated" : 357,
-  "count" : 590,
-  "uniques" : 377,
+  "timestamp" : "2022-10-16T08:32:32Z",
+  "count_outdated" : 560,
+  "uniques_outdated" : 359,
+  "count" : 591,
+  "uniques" : 378,
   "clones" : [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-04T00:00:00Z",
       "count": 3,
@@ -77,6 +70,13 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
