@@ -1,12 +1,7 @@
 {
-  "count": 32,
-  "uniques": 11,
+  "count": 31,
+  "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-10-04T00:00:00Z",
       "count": 3,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
