@@ -1,3 +1,11 @@
+2022-10-16T08:32:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258830563 # 525
+* notice: last 14d: unq all: 10 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 357 558 / 377 590
+* notice: next accum: outdated-unq outdated-all / unq all: 359 560 / 378 591
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-10-02] / [2022-10-16]
+
 2022-10-15T16:36:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256391465 # 523
 * notice: last 14d: unq all: 11 32
